# pixel_convert_n

./: .gitignore  AGENTS.md  IMPROVEMENTS.md  README.md  batch_pixel_art_converter.py  main.py  pixel_art_logic.py  pyproject.toml  ui.py
.github/: copilot-instructions.md
tests/: test_pixel_art_logic.py
