[project]
name = "pixel-convert-n"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.25.2",
    "pillow>=11.2.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
